# KeynoteFilter

./: .gitignore  KeynoteFilter.cabal  KeynoteFilter.hs  README.md
keynote_files/: BlocksPresentation.key  test.key
